# mul

./: .gitignore  CMakeLists.txt
cmake/: add_gtest.cmake
include/mul/: byte_buffer.hpp  lib.hpp
src/: CMakeLists.txt  byte_buffer.cpp  lib.cpp
tests/: CMakeLists.txt  byte_buffer_test.cpp  test.cpp
